<resources>
    <string name="app_name">settlers-no-random</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Yo first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_tile_label">Add tile</string>
    <string name="done">Done</string>
    <string name="add_one_more">Add one more</string>
    <string name="red_player">Red player</string>
    <string name="white_player">White player</string>
    <string name="brown_player">Brown player</string>
    <string name="blue_player">Blue player</string>
    <string name="yellow_player">Yellow player</string>
    <string name="orange_player">Orange player</string>
    <string name="black_player">Black player</string>
    <string name="green_player">Green player</string>
    <string name="no_player">No player</string>
    <string name="add">Add</string>
    <string name="tile_added">Tile added</string>
    <string name="number_token">Number token</string>
    <string name="resource">Resource</string>
    <string name="revert">Revert</string>
    <string name="no_value">No value</string>
    <string name="start_game">Start game</string>
    <string name="add_player">Add player</string>
    <string name="added_players">Added players</string>
    <string name="player_added">Player added</string>
    <string name="start_screen">Start screen</string>
    <string name="next_turn">Next turn</string>
    <string name="main_screen">Main screen</string>
    <string name="go_back">Go back</string>
    <string name="player_screen">Player screen</string>
    <string name="tiles_list">Tiles list</string>
    <string name="player">Player</string>
</resources>